--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css">
 
-   <!--  <link rel="stylesheet" type="text/css" href="./style.css" /> Link for Github-->
-     <link rel="stylesheet" href="CSS/style.css">  <!-- Link for local file --> 
+  <link rel="stylesheet" type="text/css" href="./style.css" /> <!-- Link for Github-->
+        <!-- <link rel="stylesheet" href="CSS/style.css">   Link for local file --> 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   
