--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 </head>
 
+
 <body>
 
   <!-- Navigation Bar-->
@@ -177,14 +178,16 @@
         <form action="code.php" method="post" class="needs-validation" novalidate>
           <div class="mb-3">
             <label class="form-label" for="userName">Name</label>
-            <input class="form-control" type="text" id="userName" name="userName" required pattern="[a-zA-Z ]+" minlength="3" placeholder="Full Name">
+            <input class="form-control form-control-lg" type="text" id="userName" name="userName" required pattern="[a-zA-Z ]+" minlength="3" placeholder="Full Name">
+
             <div class="valid-feedback">Valid Name</div>
             <div class="invalid-feedback">Please enter a valid name.</div>
           </div>
 
           <div class="mb-3">
             <label class="form-label" for="userEmail">Email address</label>
-            <input type="email" class="form-control" id="userEmail" name="userEmail" required placeholder="name@example.com">
+            <input type="email" class="form-control form-control-sm" id="userEmail" name="userEmail" required placeholder="name@example.com">
+
             <div class="valid-feedback">Valid email</div>
             <div class="invalid-feedback">Please enter a valid email.</div>
           </div>
@@ -192,13 +195,14 @@
           <div class="mb-3">
             <label class="form-label" for="userAge">Age</label>
             <input type="number" class="form-control" id="userAge" name="userAge" required min="13" max="110" >
+
             <div class="valid-feedback">Valid Age</div>
             <div class="invalid-feedback">Please enter a valid age (Only valid for users 13+) </div>
           </div>
 
           <div class="mb-3">
             <label class="form-label" for="userGender">Gender</label>
-            <select class="form-select" id="userGender" name="userGender" required>
+            <select class="form-select form-select-sm" id="userGender" name="userGender" required>
               <option value="">Select Gender</option>
               <option value="male">Male</option>
               <option value="female">Female</option>
